--- a/emails/index.html
+++ b/emails/index.html
@@ -56,11 +56,7 @@ preheader: Transactional email template
   </style>
 
   <body class="bg-gray-600 font-sans">
-    <!--[if mso]>
-    <table role="presentation" width="100%" cellspacing="0" cellpadding="0">
-      <tr>
-        <td align="center" valign="top">
-    <![endif]-->
+
     <table role="presentation" class="w-full" cellpadding="0" cellspacing="0">
       <tr>
         <td align="center" class="bg-white ">
@@ -81,7 +77,6 @@ preheader: Transactional email template
                               </tr>
                             </tbody>
                           </table>
-                          <!-- <div class="bg-gray-300 h-12 w-30 w-full"></div> -->
                         </td>
                         <td width="70%" class="p-2  text-left" align="left">
                           <p class="text-xs text-[#002B2B] font-normal font-sans m-0">Ut enim ad minim veniam, quis
@@ -104,7 +99,6 @@ preheader: Transactional email template
                             <tbody>
                               <tr>
                                 <td width="600" height="203" class="bg-gray-300">
-                                  <!-- <div class="bg-gray-300 w-full" style="max-width:600px; height:203px;"></div> -->
                                 </td>
                               </tr>
                             </tbody>
@@ -152,13 +146,7 @@ preheader: Transactional email template
 
                                   </table>
                                 </td>
-                                <!-- <td align="center" class="w-80 h-[48px]" height="48" width="345"
-                                  style=" text-align: center; vertical-align: middle">
-                                  <a href="#"
-                                    style="mso-line-height-rule:exactly; text-align:center; font-family: Arial, Helvetica, sans-serif; color: #228800; letter-spacing: normal;  text-decoration: none; display: table-cell; border-radius: 0px; vertical-align: middle; min-width: 177px; box-sizing: content-box"
-                                    class="w-[344px] mb-[26px] inline-block bg-[#008080] text-white py-3 px-3 rounded font-sans text-xl font-bold no-underline">Ut
-                                    enim ad minim veniam</a>
-                                </td> -->
+
 
 
 
@@ -188,8 +176,9 @@ preheader: Transactional email template
                                   <tbody>
                                     <tr>
                                       <td class="w-[100px] h-[100px] bg-gray-300 mx-auto rounded-full">
-                                        <img src="Icon-profile.png" src-production="images/logo.png" width="100" alt="profile">
-                                       
+                                        <img src="Icon-profile.png" src-production="images/logo.png" width="100"
+                                          alt="profile">
+
                                       </td>
                                     </tr>
                                   </tbody>
@@ -214,8 +203,9 @@ preheader: Transactional email template
                                   <tbody>
                                     <tr>
                                       <td class="w-[100px] h-[100px] bg-gray-300 mx-auto rounded-full">
-                                        <img src="Icon-profile.png" src-production="images/logo.png" width="100" alt="profile">
-                                        <!-- image need to be included for rounded shape profile -->
+                                        <img src="Icon-profile.png" src-production="images/logo.png" width="100"
+                                          alt="profile">
+
                                       </td>
                                     </tr>
                                   </tbody>
@@ -231,15 +221,6 @@ preheader: Transactional email template
                           </tbody>
                         </table>
                       </td>
-                      <!-- <td class="w-1/2 px-2 text-center sm:block sm:w-full mt-4 sm:mt-6">
-                        <div class="bg-white p-[26px] rounded shadow">
-                          <div class="w-[100px] h-[100px] bg-gray-300 mx-auto rounded-full"></div>
-                          <h4 class="my-[15px] text-xl font-bold text-[#005555] font-sans">Duis aute irure</h4>
-                          <p class="text-gray-600 text-base font-sans m-0">Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                            ad minim veniam. <sup>2</sup> </p>
-                        </div>
-                      </td> -->
                     </tr>
                   </table>
                 </td>
@@ -295,15 +276,14 @@ preheader: Transactional email template
               </tr>
               <tr>
                 <td class="pb-3" align="center">
-                  <table class="bg-gray-300"  cellpadding="0" cellspacing="0" border="0">
+                  <table class="bg-gray-300" cellpadding="0" cellspacing="0" border="0">
                     <tbody>
                       <tr>
-                        <td height="48"  class="bg-gray-300 w-[100px] ">
+                        <td height="48" class="bg-gray-300 w-[100px] ">
                         </td>
                       </tr>
                     </tbody>
                   </table>
-                  <!-- <div class="bg-gray-300 h-12 w-30 w-full"></div> -->
                 </td>
               </tr>
             </tbody>
@@ -312,10 +292,6 @@ preheader: Transactional email template
       </tr>
     </table>
 
-    <!--[if mso]>
-        </td>
-      </tr>
-    </table>
-    <![endif]-->
+
   </body>
 </x-main>
